src/core/generator/json/snapshots/tailcall__core__generator__json__schema_generator__test__schema_generator_with_query.snap
---
source: src/core/generator/json/schema_generator.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}
